--- a/hackathonvolunteer-wiki.html
+++ b/hackathonvolunteer-wiki.html
@@ -827,42 +827,42 @@
                 startDate: '2025-09-19',
                 endDate: '2025-09-21',
                 modality: 'in-person',
-                url: '#'
+                url: 'https://305hackfall2025.vercel.app'
             },
             {
                 name: '👑 EmpowHER Hackathon 2025',
                 startDate: '2025-10-13',
                 endDate: '2025-10-20',
                 modality: 'virtual',
-                url: '#'
+                url: 'https://empowherhack2025.vercel.app/'
             },
             {
                 name: '👑 EmpowHER HackDAY 2025',
                 startDate: '2025-10-18',
                 endDate: '2025-10-18',
                 modality: 'in-person',
-                url: '#'
+                url: 'https://empowherhackdayfall25.vercel.app/'
             },
             {
                 name: '🎆 CodeFest 2025',
                 startDate: '2025-12-08',
                 endDate: '2025-12-15',
                 modality: 'virtual',
-                url: '#'
+                url: 'https://codefesthack2025.vercel.app/'
             },
             {
                 name: '🔥 HackFiesta Miami 2026',
                 startDate: '2026-03-09',
                 endDate: '2026-03-15',
                 modality: 'virtual',
-                url: '#'
+                url: 'https://hackfiestamiami2026.vercel.app/'
             },
             {
                 name: '⚡ 305 Hackathon: Spring edition 2026',
                 startDate: '2026-03-20',
                 endDate: '2026-03-22',
                 modality: 'tbd',
-                url: '#'
+                url: 'https://305hackspring2026.vercel.app/'
             },
             {
                 name: '🌟 SummerCodeX 2025',
