--- a/hackathonvolunteer-wiki.html
+++ b/hackathonvolunteer-wiki.html
@@ -633,14 +633,17 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-brand">
+                <a href="https://codecrunchglobal.vercel.app" target="_blank" rel="noopener">
                 <strong>Code Crunch</strong>
+                </a>
+
             </div>
             <div class="nav-links">
-                <a href="#" class="nav-link">ColorStack at FIU</a>
-                <a href="#" class="nav-link">CAHSI at FIU</a>
-                <a href="#" class="nav-link">Google Developer Group at FIU</a>
-                <a href="#" class="nav-link">Raspberry Pi Code Crunch</a>
-                <a href="#" class="nav-link">Support Us</a>
+                <a href="https://colorstackatfiu.vercel.app/" class="nav-link">ColorStack at FIU</a>
+                <a href="https://cahsiatfiu.vercel.app/" class="nav-link">CAHSI at FIU</a>
+                <a href="https://gdgatfiu.vercel.app/" class="nav-link">Google Developer Group at FIU</a>
+                <a href="https://raspberrypicrunch.vercel.app/" class="nav-link">Raspberry Pi Code Crunch</a>
+                <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate.html" class="nav-link">Support Us</a>
             </div>
         </div>
     </nav>
