--- a/hackathonvolunteer-wiki.html
+++ b/hackathonvolunteer-wiki.html
@@ -655,7 +655,7 @@
         </div>
         <div class="timezone-grid">
             <div class="timezone-item">
-                <div class="timezone-flag">🇺🇸</div>
+                <div class="timezone-flag">🇺🇸 - HQ</div>
                 <div class="timezone-time" id="miami-time">07:06:29 PM</div>
                 <div class="timezone-location">Miami, FL (EST)</div>
             </div>
