--- a/HACK-5-305-HACK-FALL2025.html
+++ b/HACK-5-305-HACK-FALL2025.html
@@ -3627,7 +3627,7 @@ body {
                         <strong style="color: #1e293b; font-size: 1rem;">Hextronics.com</strong>
                     </div>
                     <p style="margin: 0; color: #64748b; font-size: 0.9rem; line-height: 1.5;">
-                        <strong>🚁 Exclusive Access:</strong> Teams will have their drone base station on-site to capture aerial videos of the surrounding area for training computer vision algorithms. Plus, teams get access to their API for controlling the drone.
+                        <strong>🚁 Exclusive:</strong> Hextronics will provide their drone base station on-site to capture aerial videos of the surrounding area for training computer vision algorithms. Teams will also have access to their API for controlling the drone.
                     </p>
                 </div>
 
@@ -3641,12 +3641,17 @@ body {
                         <div style="color: #64748b; font-size: 0.85rem;">3 months subscription</div>
                     </div>
                     
-                    <div style="background: white; padding: 12px 15px; border-radius: 6px; flex: 1; min-width: 180px; box-shadow: 0 2px 4px rgba(0,0,0,0.05); border-left: 3px solid #dc2626;">
-                        <div style="color: #dc2626; font-weight: 600; font-size: 0.9rem; margin-bottom: 4px;">
-                            <i class="fas fa-code" style="margin-right: 6px;"></i>
-                            API Credits
+                    <div style="background: white; padding: 12px 15px; border-radius: 6px; flex: 1; min-width: 200px; box-shadow: 0 2px 4px rgba(0,0,0,0.05); border-left: 3px solid #0078d4;">
+                        <div style="color: #0078d4; font-weight: 600; font-size: 0.9rem; margin-bottom: 4px;">
+                            <i class="fas fa-brain" style="margin-right: 6px;"></i>
+                            Azure OpenAI Credits
                         </div>
                         <div style="color: #64748b; font-size: 0.85rem;">125 credits</div>
+                        <div style="color: #64748b; font-size: 0.8rem; margin-top: 2px; line-height: 1.2;">
+                            Sponsored by <a href="https://www.linkedin.com/in/harshith-vaddiparthy/" target="_blank" style="color: #0078d4; text-decoration: none;"><strong>Harshith Vaddiparthy</strong></a><br>
+                            <span style="font-size: 0.75rem;">Head of Growth @ JustPaid [YC W23]</span><br>
+                            <span style="font-size: 0.75rem;">Forbes Technology Council Member</span>
+                        </div>
                     </div>
                 </div>
             </div>
