--- a/HACK-5-305-HACK-FALL2025.html
+++ b/HACK-5-305-HACK-FALL2025.html
@@ -5987,6 +5987,9 @@ body {
                     <a href="https://neon.com" target="_blank" rel="noopener noreferrer">
                         <img src="https://github.com/user-attachments/assets/35051d0d-e126-467a-9665-018fdad3fd9b" alt="Neon.com" class="sponsor-logo">
                     </a>
+                    <a href="https://www.miamidda.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="https://github.com/user-attachments/assets/4c340f35-ec19-4e51-8921-8e264b723369" alt="Miami Downtown Development Authority - miamidda.com/" class="sponsor-logo">
+                    </a>
                     <a href="https://unibee.dev" target="_blank" rel="noopener noreferrer">
                         <img src="https://github.com/user-attachments/assets/270af8c7-6dee-48db-b1bb-45877e90c8be" alt="Unibee.dev" class="sponsor-logo">
                     </a>
