--- a/HACK-5-305-HACK-FALL2025.html
+++ b/HACK-5-305-HACK-FALL2025.html
@@ -3815,11 +3815,22 @@ body {
                 <div style="background: white; padding: 15px; border-radius: 6px; margin-bottom: 15px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
                     <div style="display: flex; align-items: center; margin-bottom: 8px;">
                         <span style="background: #10b981; color: white; padding: 4px 8px; border-radius: 4px; font-size: 0.8rem; font-weight: 600; margin-right: 10px;">$500</span>
-                        <strong style="color: #1e293b; font-size: 1rem;">Hextronics.com</strong>
+                        <strong style="color: #1e293b; font-size: 1rem;">
+                            <a href="https://hextronics.com" target="_blank" style="color: #1e293b; text-decoration: none;">Hextronics.com</a>
+                        </strong>
                     </div>
-                    <p style="margin: 0; color: #64748b; font-size: 0.9rem; line-height: 1.5;">
-                        <strong>🚁 Exclusive:</strong> Hextronics will provide their drone base station on-site to capture aerial videos of the surrounding area for training computer vision algorithms. Teams will also have access to their API for controlling the drone.
-                    </p>
+                    
+                    <div style="margin-bottom: 10px;">
+                        <p style="margin: 0; color: #64748b; font-size: 0.9rem; line-height: 1.5;">
+                            <strong>🚁 Exclusive:</strong> Hextronics will provide their drone base station on-site to capture aerial videos of the surrounding area for training computer vision algorithms. Teams will also have access to their API for controlling the drone.
+                        </p>
+                    </div>
+                    
+                    <div style="padding: 10px; background: #f8fafc; border-radius: 4px; border-left: 3px solid #10b981;">
+                        <p style="margin: 0; color: #64748b; font-size: 0.85rem; line-height: 1.4;">
+                            <strong>About Hextronics:</strong> A Miami-based hardware startup building advanced "drone-in-a-box" systems that automate drone deployment and battery swapping for persistent, autonomous operations. Hex designs and manufactures its products in-house, including the Atlas and Universal, alongside integrated software like HexAir for flight control and HexVision for data analytics. Hextronics serves customers across industries such as rail, oil & gas, public safety, and logistics, with deployments in 20+ U.S. states and over 25 countries.
+                        </p>
+                    </div>
                 </div>
 
                 <!-- Additional Prizes -->
@@ -3827,7 +3838,7 @@ body {
                     <div style="background: white; padding: 12px 15px; border-radius: 6px; flex: 1; min-width: 180px; box-shadow: 0 2px 4px rgba(0,0,0,0.05); border-left: 3px solid #7c3aed;">
                         <div style="color: #7c3aed; font-weight: 600; font-size: 0.9rem; margin-bottom: 4px;">
                             <i class="fas fa-calendar-alt" style="margin-right: 6px;"></i>
-                            Unibee.dev
+                            <a href="https://unibee.dev" target="_blank" style="color: #7c3aed; text-decoration: none;">Unibee.dev</a>
                         </div>
                         <div style="color: #64748b; font-size: 0.85rem;">3 months subscription</div>
                     </div>
