--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -281,7 +281,7 @@
                     </a>
 
                     <!-- Raspberry Pi Code Crunch -->
-                    <a href="https://www.raspberrypicodecrunch.vercel.app" target="_blank" 
+                    <a href="https://raspberrypicodecrunch.vercel.app/" target="_blank" 
                        class="bg-white/10 backdrop-blur-sm rounded-xl p-4 md:p-6 text-white hover:bg-white/20 card-hover text-decoration-none touch-target focus-visible will-change-transform backface-hidden sm:col-span-2 lg:col-span-1">
                         <div class="mb-3 md:mb-4 flex justify-center">
                             <img src="https://github.com/user-attachments/assets/1eaf8425-7b4b-4035-a84b-b9b0ed28c52c" 
