--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -200,6 +200,7 @@
     </div>
                 
 
+
                 <!-- For Companies -->
                 <div class="text-center flex-1 max-w-xs mx-auto lg:max-w-none">
                     <h3 class="text-xl md:text-2xl font-bold text-white mb-3 md:mb-4">For Companies</h3>
@@ -653,7 +654,7 @@
         
         <!-- Call to Action Button -->
         <div class="text-center">
-          <a href="#" 
+          <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" 
              onclick="redirectToTargetPage()" 
              class="btn-hover-effect inline-flex items-center px-8 py-4 bg-white text-blue-600 font-bold text-lg rounded-xl shadow-lg hover:bg-blue-50 focus:outline-none focus:ring-4 focus:ring-blue-300">
             <span class="mr-2">🚀</span>
