--- a/hackathons-discordcopy1.html
+++ b/hackathons-discordcopy1.html
@@ -587,8 +587,8 @@
         </div>
         
         <div class="buttons">
-            <button class="btn btn-yes" onclick="showEmailForm()">Yes, I am a member or I have registered for an upcoming hackathon</button>
-            <a href="#" class="btn btn-no" onclick="redirectToRegistration()">No, but I want to register to become a member / register for an upcoming hackathon</a>
+            <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform-1.html" class="btn btn-yes">Yes, I am a member or I have registered for an upcoming hackathon</a>
+            <a href="https://hackuniversity-onestopform.vercel.app/" class="btn btn-no">No, but I want to register to become a member / register for an upcoming hackathon</a>
         </div>
         
         <div class="certificate-preview-main">
