--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -192,7 +192,7 @@
                class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
                 Hack University Wiki <br>[Events and Resources Links] <br> Students 13+ 
             </a>
-            <a href="http://hackuniversitycalendar.vercel.app/" target="_blank" 
+            <a href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank" 
                class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
                 Hack University Calendar <br> Students 13+ 
             </a>
