--- a/hackuniversity-calendar.html
+++ b/hackuniversity-calendar.html
@@ -163,7 +163,7 @@
                 </div>
                 <h3 class="text-xl font-bold mb-2 text-gray-800">ColorStack</h3>
                 <p class="text-gray-600 text-sm mb-4">at Florida International University</p>
-                <a href="https://lu.ma/colorstackatfiu" 
+                <a href="https://luma.com/colorstackatfiu" 
                    target="_blank" 
                    class="btn-hover bg-yellow-600 hover:bg-yellow-700 text-white px-4 py-2 rounded-lg font-semibold text-decoration-none inline-flex items-center gap-2">
                     <i class="far fa-calendar-alt"></i>
