--- a/hackuniversity-calendar.html
+++ b/hackuniversity-calendar.html
@@ -195,7 +195,7 @@
                 </div>
                 <h3 class="text-xl font-bold mb-2 text-gray-800">Raspberry Pi</h3>
                 <p class="text-gray-600 text-sm mb-4">Code Crunch Community</p>
-                <a href="lu.ma/codecrunch" 
+                <a href="https://luma/codecrunch" 
                    target="_blank" 
                    class="btn-hover bg-pink-600 hover:bg-pink-700 text-white px-4 py-2 rounded-lg font-semibold text-decoration-none inline-flex items-center gap-2">
                     <i class="far fa-calendar-alt"></i>
