--- a/hackuniversity-onestopform.html
+++ b/hackuniversity-onestopform.html
@@ -582,6 +582,7 @@
                 <div class="feature-item">🏅 Register for 7 annual hackathons</div>
                 <div class="feature-item">📜 Official membership certificates</div>
                 <div class="feature-item">⭐ Executive Board application eligibility</div>
+                <div class="feature-item">🙋 Volunteer application eligibility</div>
             </div>
             <p class="note"><strong>** If you forgot to register for a hack, you must resubmit the form to make sure your registration for that specific hack is counted.</strong></p>
         </div>
