--- a/RENDER.html
+++ b/RENDER.html
@@ -48,7 +48,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <h1>📋 Attendance System</h1>
+      <h1>📋 Attendance</h1>
       <p>Please select your category to view the correct attendance URL</p>
     </div>
 
@@ -67,13 +67,11 @@
       <button class="attendance-btn fiu-other" aria-disabled="true">
         🎓 FIU Students (Off Campus/Online) &amp; Non-FIU Students
         <br><small>URL: https://hackuniversityattendance.vercel.app</small>
-        <div class="note">Hosted by cahsi at FIU &amp; Hack University</div>
+        <div>Hosted by CAHSI at FIU &amp; Hack University</div>
       </button>
     </div>
 
-    <a class="link-btn" href="https://hackuniversity.vercel.app" target="_blank" rel="noopener">
-      CAHSI &amp; Hack University
-    </a>
+
   </div>
 </body>
 </html>
