--- a/RENDER.html
+++ b/RENDER.html
@@ -1,77 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Attendance System</title>
-  <style>
-    *{margin:0;padding:0;box-sizing:border-box}
-    body{
-      font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;
-      background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);
-      min-height:100vh;display:flex;justify-content:center;align-items:center;padding:20px
-    }
-    .container{
-      background:#fff;border-radius:20px;padding:40px;
-      box-shadow:0 20px 60px rgba(0,0,0,.1);
-      max-width:600px;width:100%;text-align:center
-    }
-    .header{margin-bottom:40px}
-    .header h1{color:#333;font-size:2.2em;margin-bottom:10px;font-weight:700}
-    .header p{color:#666;font-size:1.05em}
-    .attendance-options{display:flex;flex-direction:column;gap:20px;margin-bottom:30px}
-    .attendance-btn{
-      background:linear-gradient(45deg,#667eea,#764ba2);
-      color:#fff;border:none;padding:20px 30px;font-size:1.15em;
-      border-radius:15px;cursor:default; /* no click */
-      box-shadow:0 8px 25px rgba(102,126,234,.3);position:relative;overflow:hidden
-    }
-    .everglades{background:linear-gradient(45deg,#4facfe,#00f2fe)}
-    .on-campus{background:linear-gradient(45deg,#43e97b,#38f9d7)}
-    .fiu-other{background:linear-gradient(45deg,#fa709a,#fee140)}
-    .attendance-btn small{display:inline-block;margin-top:6px;opacity:.95;font-size:.85em}
-    .note{
-      margin-top:10px;color:#666;font-size:.9em
-    }
-    .link-btn{
-      display:inline-block;margin-top:30px;background:linear-gradient(45deg,#667eea,#764ba2);
-      color:#fff;text-decoration:none;padding:12px 22px;border-radius:25px;font-weight:500;
-      box-shadow:0 5px 15px rgba(102,126,234,.3)
-    }
-    @media (max-width:768px){
-      .container{padding:30px 20px}
-      .header h1{font-size:1.9em}
-      .attendance-btn{padding:18px 20px;font-size:1.05em}
-    }
-  </style>
+<meta http-equiv="refresh" content="0; url=https://codecrunchglobal.vercel.app/cc-wiki.html">
 </head>
-<body>
-  <div class="container">
-    <div class="header">
-      <h1>📋 Attendance</h1>
-      <p>Please select your category to view the correct attendance URL</p>
-    </div>
-
-    <div class="attendance-options">
-      <button class="attendance-btn everglades" aria-disabled="true">
-        🏠 Everglades Residents
-        <br><small>URL: https://forms.office.com/Pages/ResponsePage.aspx?id=qOV5rOTgS0OikiyJtcKDZj6p81MggldMriz6esFd7VpUNUVMQTBHWjVCT1hIVk1ZMVUzNzE4Slc3Ri4u</small>
-      </button>
-
-      <button class="attendance-btn on-campus" aria-disabled="true">
-        🏛️ On Campus Residents
-        <br><small>URL: https://forms.office.com/Pages/ResponsePage.aspx?id=qOV5rOTgS0OikiyJtcKDZj6p81MggldMriz6esFd7VpUNUVMQTBHWjVCT1hIVk1ZMVUzNzE4Slc3Ri4u</small>
-        <div class="note">Event hosted by RA Brian and RA Raiyan</div>
-      </button>
-
-      <button class="attendance-btn fiu-other" aria-disabled="true">
-        🎓 FIU Students (Off Campus/Online) &amp; Non-FIU Students
-        <br><small>URL: https://hackuniversityattendance.vercel.app</small>
-        <div>Hosted by CAHSI at FIU &amp; Hack University</div>
-      </button>
-    </div>
-
-
-  </div>
-</body>
+<body></body>
 </html>
+
