--- a/technical-learning.html
+++ b/technical-learning.html
@@ -750,10 +750,10 @@
                                 <i class="fas fa-book text-xl"></i>
                                 <span class="text-xs mt-1 text-center">Course Schedule</span>
                             </a>
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLScOA6IBnLxnxEnk-BOaXYyPXpJ3dU6Cu4OOrPJ7ErOgKvIdEQ/viewform?usp=dialog" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
-                                <i class="fas fa-clipboard-check text-xl"></i>
-                                <span class="text-xs mt-1">Attendance</span>
-                            </a>
+                                <a href="https://hackuniversityattendance.vercel.app/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                    <i class="fas fa-clipboard-check text-xl"></i>
+                                    <span class="text-xs mt-1">Attendance</span>
+                                </a>
                         </div>
                     </div>
                 </div>
