--- a/HACK-6.1-EmpowHERhackDay25.html
+++ b/HACK-6.1-EmpowHERhackDay25.html
@@ -353,7 +353,7 @@
                 <p style="font-size: 1.3em; margin-bottom: 40px; opacity: 0.9;">
                     Register now and be part of this inspiring hackathon experience!
                 </p>
-                <a href="https://hackuniversity-discord.vercel.app" class="cta-button" style="font-size: 1.3em; padding: 20px 50px;">
+                <a href="https://events.mlh.io/events/13014-empowher-hackday" class="cta-button" style="font-size: 1.3em; padding: 20px 50px;">
                     Register
                 </a>
             </div>
