--- a/HACK-6.1-EmpowHERhackDay25.html
+++ b/HACK-6.1-EmpowHERhackDay25.html
@@ -596,7 +596,7 @@
             <div class="logo">EmpowHer HackDay</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
-                <li><a href="#schedule">Schedule</a></li>
+                <li><a href="http://empowherhackdayfall2025-agenda.vercel.app/">Schedule</a></li>
                 <li><a href="#prizes">Prizes</a></li>
                 <li><a href="#sponsors">Sponsors</a></li>
             </ul>
@@ -685,7 +685,7 @@
             </div>
         </section>
 
-        <section class="features">
+        <section class="features" id="prizes" >
             <div class="container">
                 <h2>Why Join EmpowHer HackDay?</h2>
                 <div class="features-grid">
@@ -814,15 +814,15 @@
                             <i class="fab fa-linkedin hack-university-social-icon" aria-hidden="true"></i>
                             <span class="hack-university-social-text">LinkedIn</span>
                         </a>
-                        <a href="https://hackuniversity.vercel.app/" class="hack-university-social-link hack-university-text-decoration-none hack-university-focus-visible">
+                        <a href="https://hackuniversity-directory.vercel.app/" class="hack-university-social-link hack-university-text-decoration-none hack-university-focus-visible">
                             <i class="fab fa-instagram hack-university-social-icon" aria-hidden="true"></i>
                             <span class="hack-university-social-text">Instagram</span>
                         </a>
-                        <a href="https://hackuniversity.vercel.app/" class="hack-university-social-link hack-university-text-decoration-none hack-university-focus-visible">
+                        <a href="https://hackuniversity-directory.vercel.app/" class="hack-university-social-link hack-university-text-decoration-none hack-university-focus-visible">
                             <i class="fab fa-github hack-university-social-icon" aria-hidden="true"></i>
                             <span class="hack-university-social-text">GitHub</span>
                         </a>
-                        <a href="https://hackuniversity.vercel.app/" class="hack-university-social-link hack-university-text-decoration-none hack-university-focus-visible">
+                        <a href="https://hackuniversity-directory.vercel.app/" class="hack-university-social-link hack-university-text-decoration-none hack-university-focus-visible">
                             <i class="fab fa-youtube hack-university-social-icon" aria-hidden="true"></i>
                             <span class="hack-university-social-text">YouTube</span>
                         </a>
