--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -749,7 +749,7 @@ function redirectToTargetPage() {
                     <div class="mt-6">
                         <h4 class="text-sm font-bold mb-3">Connect With Us:</h4>
                         <div class="social-grid grid grid-cols-3 gap-2 md:gap-3">
-                            <a href="https://hackuniversity-directory.vercel.app/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200 text-decoration-none touch-target focus-visible p-2">
+                            <a href="https://www.linkedin.com/showcase/hack-university-global/" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200 text-decoration-none touch-target focus-visible p-2">
                                 <i class="fab fa-linkedin text-lg md:text-xl" aria-hidden="true"></i>
                                 <span class="text-xs mt-1">LinkedIn</span>
                             </a>
