--- a/HACK-6.1-EmpowHERhackDay25.html
+++ b/HACK-6.1-EmpowHERhackDay25.html
@@ -636,6 +636,15 @@
                         🚀 Register Now on MLH
                     </a>
                     <a href="#about" class="btn btn-secondary">Learn More</a>
+                    <a href="https://empowherhackdayfall2025-devpost.vercel.app/" target="_blank" class="btn btn-secondary">
+                        📝 Devpost Submission Portal
+                    </a>
+                    <a href="https://hacksatfiu-toolkit.vercel.app/" target="_blank" class="btn btn-secondary">
+                        📚 Hacker Guide
+                    </a>
+                    <a href="https://empowherhackdayfall2025-agenda.vercel.app/" target="_blank" class="btn btn-secondary">
+                        📅 Hack Agenda
+                    </a>
                 </div>
                 
                 <div class="calendar-buttons" style="margin-top: 2rem;">
