--- a/HACK-6-EmpowHER25.HTML
+++ b/HACK-6-EmpowHER25.HTML
@@ -487,7 +487,7 @@
             <span style="font-size: 1.2rem;">🚀</span> <strong>Kick-Off:</strong> Oct 13 @ 10:00 PM EST
         </div>
         <div style="background: rgba(255, 255, 255, 0.1); padding: 0.75rem 1.5rem; border-radius: 8px; display: flex; align-items: center; gap: 0.5rem; backdrop-filter: blur(4px); border: 1px solid rgba(102, 126, 234, 0.2);">
-            <span style="font-size: 1.2rem;">🎉</span> <strong>Closing:</strong> Oct 20 @ 10:00 PM EST
+            <span style="font-size: 1.2rem;">🎉</span> <strong>Closing ceremony & Live Demos presentation:</strong> Oct 20 @ 10:00 PM EST
         </div>
         <div style="background: rgba(255, 255, 255, 0.1); padding: 0.75rem 1.5rem; border-radius: 8px; display: flex; align-items: center; gap: 0.5rem; backdrop-filter: blur(4px); border: 1px solid rgba(102, 126, 234, 0.2);">
             <span style="font-size: 1.2rem;">💻</span> <strong>100% Virtual</strong>
