--- a/HACK-6-EmpowHER25.HTML
+++ b/HACK-6-EmpowHER25.HTML
@@ -487,10 +487,23 @@
             <span style="font-size: 1.2rem;">🚀</span> <strong>Kick-Off:</strong> Oct 13 @ 10:00 PM EST
         </div>
         <div style="background: rgba(255, 255, 255, 0.1); padding: 0.75rem 1.5rem; border-radius: 8px; display: flex; align-items: center; gap: 0.5rem; backdrop-filter: blur(4px); border: 1px solid rgba(102, 126, 234, 0.2);">
-            <span style="font-size: 1.2rem;">🎉</span> <strong>Closing ceremony & Live Demos presentation:</strong> Oct 20 @ 10:00 PM EST
+            <span style="font-size: 1.2rem;">🎉</span> <strong>Closing Ceremony & Live Demos:</strong> Oct 20 @ 10:00 PM EST
         </div>
         <div style="background: rgba(255, 255, 255, 0.1); padding: 0.75rem 1.5rem; border-radius: 8px; display: flex; align-items: center; gap: 0.5rem; backdrop-filter: blur(4px); border: 1px solid rgba(102, 126, 234, 0.2);">
             <span style="font-size: 1.2rem;">💻</span> <strong>100% Virtual</strong>
+        </div>
+    </div>
+    
+    <!-- Zoom Links Section -->
+    <div style="background: rgba(102, 126, 234, 0.15); border-radius: 12px; padding: 1.5rem; margin: 2rem 0; backdrop-filter: blur(4px); border: 1px solid rgba(102, 126, 234, 0.3);">
+        <h4 style="color: #667eea; text-align: center; margin-bottom: 1rem; font-size: 1.3rem;">🎥 Join Us on Zoom</h4>
+        <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem; margin-top: 1rem;">
+            <a href="https://codecrunch-zoom.vercel.app" target="_blank" class="apply-button" style="background: linear-gradient(135deg, #667eea, #764ba2); font-size: 1.1rem; padding: 12px 25px;">
+                <i class="fas fa-video me-2"></i> Kick-Off Zoom
+            </a>
+            <a href="https://codecrunch-zoom.vercel.app" target="_blank" class="apply-button" style="background: linear-gradient(135deg, #f093fb, #667eea); font-size: 1.1rem; padding: 12px 25px;">
+                <i class="fas fa-video me-2"></i> Closing Ceremony Zoom
+            </a>
         </div>
     </div>
     
