--- a/HACK-6-EmpowHER25.HTML
+++ b/HACK-6-EmpowHER25.HTML
@@ -404,7 +404,7 @@
                         <span>Register Now</span>
                     </a>
                     
-                    <a href="EmpowHERHack2025-agenda.vercel.app﻿" 
+                    <a href="https://EmpowHERHack2025-agenda.vercel.app﻿" 
                        target="_blank" 
                        class="hacker-button"
                        style="display: flex; align-items: center; justify-content: center; gap: 8px; padding: 12px 20px; font-size: 1rem; font-weight: bold; text-decoration: none; border-radius: 10px; background: linear-gradient(135deg, #667eea, #764ba2); color: white; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(102, 126, 234, 0.3);">
@@ -412,7 +412,7 @@
                         <span>Hack Agenda</span>
                     </a>
                     
-                    <a href="codecrunchglobal.vercel.app/hacks-toolkit.html" 
+                    <a href="https://codecrunchglobal.vercel.app/hacks-toolkit.html" 
                        target="_blank" 
                        class="hacker-button"
                        style="display: flex; align-items: center; justify-content: center; gap: 8px; padding: 12px 20px; font-size: 1rem; font-weight: bold; text-decoration: none; border-radius: 10px; background: linear-gradient(135deg, #667eea, #764ba2); color: white; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(102, 126, 234, 0.3);">
