--- a/HACK-6.1-EmpowHERhackDay25.html
+++ b/HACK-6.1-EmpowHERhackDay25.html
@@ -678,7 +678,7 @@
                     <div class="detail-card">
                         <div class="detail-icon">📍</div>
                         <h3>Where</h3>
-                        <p>Florida International University<br>FIU Campus, Miami</p>
+                        <p>Parking garage (PG6) 112 - Florida International University<br>FIU Campus, Miami</p>
                     </div>
                     <div class="detail-card">
                         <div class="detail-icon">⏱️</div>
