--- a/hackathonvolunteer-login.html
+++ b/hackathonvolunteer-login.html
@@ -1,61 +1,101 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Volunteer Login</title>
-<style>
-body { font-family: system-ui, Arial, sans-serif; max-width: 520px; margin: 6rem auto; padding: 0 1rem; }
-.card { border: 1px solid #e5e7eb; padding: 1.5rem; border-radius: 12px; box-shadow: 0 2px 10px rgba(0,0,0,0.04); }
-label { display:block; margin-bottom: .5rem; font-weight: 600; }
-input[type=email]{ width:100%; padding:.75rem; border:1px solid #d1d5db; border-radius:8px; }
-button{ margin-top:1rem; padding:.75rem 1rem; border:none; border-radius:10px; cursor:pointer; }
-.primary{ background:#111827; color:#fff; }
-.msg{ margin-top:1rem; }
-.ok{ color:#065f46; }
-.err{ color:#991b1b; }
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Volunteer Login</title>
+  <style>
+    body { font-family: system-ui, Arial, sans-serif; max-width: 520px; margin: 8vh auto; padding: 0 16px; }
+    .card { border: 1px solid #e5e7eb; padding: 20px; border-radius: 12px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
+    h1 { margin: 0 0 8px; }
+    p  { margin: 8px 0; color: #4b5563; }
+    label { display:block; margin: 12px 0 6px; font-weight: 600; }
+    input[type=email] { width:100%; padding: 12px; border:1px solid #d1d5db; border-radius:10px; }
+    button { margin-top:12px; padding: 10px 14px; border: 0; border-radius: 10px; background:#111827; color:#fff; cursor:pointer; }
+    .msg { margin-top: 12px; }
+    .ok  { color: #065f46; }
+    .err { color: #991b1b; }
+    .hidden { display:none; }
+    .profile { margin-top: 14px; padding: 12px; background:#f9fafb; border:1px solid #e5e7eb; border-radius:10px; }
+    .muted { color:#6b7280; font-size: 0.925rem; }
+  </style>
 </head>
 <body>
-<div class="card">
-<h1>Volunteer Login</h1>
-<p>Enter the email you used to register. We’ll check it against our volunteer list.</p>
-<label for="email">Email</label>
-<input id="email" type="email" placeholder="you@example.com" required />
-<button class="primary" id="btn">Continue</button>
-<div class="msg" id="msg"></div>
-</div>
+  <div class="card">
+    <h1>Volunteer Login</h1>
+    <p>Enter the email you used to register. We’ll check it against the volunteer list.</p>
 
+    <label for="email">Email</label>
+    <input id="email" type="email" placeholder="you@example.com" required />
 
-<script>
-const API_URL = "PASTE_APPS_SCRIPT_WEB_APP_URL_HERE"; // e.g. https://script.google.com/macros/s/AKfyc.../exec
+    <button id="btn">Continue</button>
+    <div id="msg" class="msg"></div>
 
+    <div id="profile" class="profile hidden">
+      <div id="greeting" style="font-weight:600;"></div>
+      <div id="details" class="muted"></div>
+    </div>
+  </div>
 
-document.getElementById('btn').addEventListener('click', async () => {
-const email = document.getElementById('email').value.trim();
-const msg = document.getElementById('msg');
-msg.textContent = "";
-if (!email) { msg.textContent = "Please enter your email."; msg.className = 'msg err'; return; }
-try {
-const res = await fetch(`${API_URL}?email=${encodeURIComponent(email)}`);
-const data = await res.json();
-if (data.allowed) {
-// Simple client-side session (for demo). For production, set an httpOnly cookie via a server.
-localStorage.setItem('volunteer_auth', 'true');
-localStorage.setItem('volunteer_email', email);
-msg.textContent = "Access granted. Redirecting...";
-msg.className = 'msg ok';
-// Redirect to your protected page
-window.location.href = "/dashboard.html";
-} else {
-msg.textContent = "This email is not on the volunteer list. If you recently registered, give it a few minutes or contact an organizer.";
-msg.className = 'msg err';
-}
-} catch (e) {
-msg.textContent = "Error contacting server. Please try again.";
-msg.className = 'msg err';
-}
-});
-</script>
+  <script>
+    // === SET THIS ===
+    const API_URL = "https://script.google.com/macros/s/AKfycbz0FkcYV_Wkt5Iv1BKzJw6KXIoqXgfyBPDfAVRlLjsJbZ1Iq9eqX-hT5EEkTJGxNgfs5w/exec";
+    // If your Apps Script requires a shared key (server-to-server), this simple HTML cannot safely include it.
+    // Either remove the key requirement in Apps Script or proxy via your own server.
+    // const SHARED_KEY = "UNSAFE_TO_PUT_HERE"; // ⚠️ Don't expose secrets in client code.
+
+    const $ = (id) => document.getElementById(id);
+
+    $("btn").addEventListener("click", async () => {
+      const email = $("email").value.trim();
+      const msg = $("msg");
+      const profile = $("profile");
+      const greet = $("greeting");
+      const details = $("details");
+
+      msg.textContent = "";
+      profile.classList.add("hidden");
+      greet.textContent = "";
+      details.textContent = "";
+
+      if (!email) {
+        msg.textContent = "Please enter your email.";
+        msg.className = "msg err";
+        return;
+      }
+
+      try {
+        const url = `${API_URL}?email=${encodeURIComponent(email)}`; // + `&key=${encodeURIComponent(SHARED_KEY)}` if you *temporarily* allow it
+        const res = await fetch(url, { cache: "no-store" });
+        if (!res.ok) {
+          msg.textContent = "Access denied or server error.";
+          msg.className = "msg err";
+          return;
+        }
+        const data = await res.json();
+        if (!data || !data.allowed) {
+          msg.textContent = "This email is not on the volunteer list.";
+          msg.className = "msg err";
+          return;
+        }
+
+        // Success — show greeting
+        const discord = (data.discord || "").trim();
+        greet.textContent = `Welcome ${data.email || email}${discord ? ` (${discord})` : ""}!`;
+        const parts = [];
+        if (data.position) parts.push(data.position);
+        if (data.company) parts.push(data.company);
+        if (data.timestamp) parts.push(`Added: ${data.timestamp}`);
+        details.textContent = parts.join(" • ");
+
+        msg.textContent = "Access granted.";
+        msg.className = "msg ok";
+        profile.classList.remove("hidden");
+      } catch (e) {
+        msg.textContent = "Network error. Please try again.";
+        msg.className = "msg err";
+      }
+    });
+  </script>
 </body>
 </html>
